fix: formatted all files to endure readability

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -33,7 +33,7 @@
         line-height: normal;
 
         span {
-            color:  #528BFF;
+          color: #528bff;
         }
       }
     }
@@ -60,8 +60,5 @@
         }
       }
     }
-
-    
-    
   }
 }
